Fix link for source tree layout

--- a/content/development/getting-started.html
+++ b/content/development/getting-started.html
@@ -51,7 +51,7 @@ for more details about the process.</p>
 <li><a href="/guides/building/get-source-git/">Familiarize yourself with Gerrit, our code collaboration tool, and fetch a copy of the Haiku source code.</a>
 <li><a href="/guides/building">Build your own copy of the Haiku operating system.</a>
 <li><a href="https://dev.haiku-os.org/wiki">Familiarize yourself with our project management and Trac, our bug and issue tracking system.</a>
-<li><a href="/documents/dev/a_brief_introduction_to_our_source_repository_layout">Learn more about our source tree layout.</a>
+<li><a href="/docs/develop/build/sourcecode.html#source-tree-organization">Learn more about our source tree layout.</a>
 <li><a href="/development/coding-guidelines/">Learn more about our Coding Guidelines.</a>.
 <li><a href="https://dev.haiku-os.org/wiki/CodingGuidelines/SubmittingPatches">Finally, submit your first patch.</a>
 </ul>
